NOJIRA FindBugs fixes for transient OSGi references, NPE derefs.